<resources>
    <string name="app_name">SingleScreenApp</string>
    <string name="facebook">Facebook</string>
    <string name="fb_toast_unable">Unable to open fb page.</string>
    <string name="map_toast">Here is our company situated on map. . .</string>
    <string name="map_toast_unable"> Unable to open the map.</string>
    <string name="twitter">Twitter</string>
    <string name="header">AiryDev</string>
    <string name="sub">Faster. Lighter. Smarter.</string>
    <string name="explore_button">EXPLORE</string>
    <string name="contact">Contact us at &#8230;</string>
    <string name="street">25 Wonder St</string>
    <string name="city">Glasgow</string>
    <string name="mail1">canady.vladka@gmail.com</string>
    <string name="mail2">mira.arim90@gmail.com</string>
    <string name="number_1">00111 001 0001</string>
    <string name="number_2">00222 002 0002</string>
    <string name="web1">www.linkedin.com/in/</string>
    <string name="web2">vladimira-canadyova</string>
    <string name="description">Donec et ullamcorper nisl, non ultricies purus. In id ipsum ut nisl fermentum tristique tempor non arcu. In hac habitasse platea dictumst. Mauris euismod mauris eros.</string>
    <string name="testimonial">Proin et sodales ipsum, vitae scelerisque velit. Aliquam scelerisque justo et blandit pretium. Vestibulum id aliquam nibh.&quot;</string>
    <string name="testimonial_heading">Client said . . . </string>
    <string name="portfolio_heading">Our Portfolio . . . </string>
    <string name="number_one_unable">Unable to open calling app.</string>
    <string name="number_one">tel: 00111 001 0001</string>
    <string name="number_two">tel: 00222 002 0002</string>
    <string name="number_two_unable">Unable to open calling app.</string>
    <string name="mail_to">mailto: exampleaľ@yourdomain.com</string>
    <string name="mail_subject">Customer enquiry</string>
    <string name="mail_text">DearAiryDev Team,</string>
    <string name="mail_question">Do you want to send an e-mail to us?</string>
    <string name="mail_unable">Unable to open e-mail.</string>
    <string name="address_geo">geo: 55.8642, -4.2518</string>
    <string name="mail2_to">mailto: mira.arim90@gmail.com</string>
    <string name="mail2_subject">Customer enquiry</string>
    <string name="url_fb">https://www.facebook.com/#</string>
    <string name="unable_fb">Unable to open fb page.</string>
    <string name="url_twitter">https://www.twitter.com/#</string>
    <string name="unable_twitter">Unable to open twitter page.</string>
    <string name="url_button">https://www.yourdomain0000123.com/</string>
    <string name="unable_button">Unable to open the site.</string>
    <string name="url_linkedin">https://www.linkedin.com/in/vladimira-canadyova</string>
    <string name="unable_linkedin">Unable to open LinkedIn page.</string>
</resources>
