<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:src="@color/mainLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/design"
            style="@style/MainImage" />

        <TextView
            android:id="@+id/header"
            style="@style/Header" />

        <TextView
            android:id="@+id/sub"
            style="@style/Sub"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:text="@string/sub" />

        <Button
            android:id="@+id/explore"
            style="@style/ExploreButton"
            android:layout_below="@id/sub"
            android:text="@string/explore_button" />

        <ImageButton
            android:id="@+id/fb"
            style="@style/Facebook"
            android:layout_below="@id/sub"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:id="@+id/twitter"
            style="@style/Twitter"
            android:layout_below="@id/sub"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <ScrollView style="@style/MatchParent">

        <LinearLayout
            android:id="@+id/activity_main"
            style="@style/MatchParent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:src="@color/mainLayout">

            <TextView
                style="@style/Description"
                android:text="@string/description" />

            <LinearLayout style="@style/HorizontalLayoutTwoBoxes">


                <LinearLayout
                    style="@style/questionBox"
                    android:orientation="vertical"
                    tools:context=".MainActivity">

                    <ImageView
                        android:id="@+id/address"
                        style="@style/Icon"
                        android:src="@drawable/bell" />

                    <TextView
                        style="@style/TextLightBox"
                        android:text="@string/street" />

                    <View style="@style/SeparatorLight" />

                    <TextView
                        style="@style/TextLightBox"
                        android:text="@string/city" />

                </LinearLayout>

                <LinearLayout
                    style="@style/questionBox3"
                    android:orientation="vertical"
                    tools:context=".MainActivity">

                    <ImageView
                        style="@style/Icon"
                        android:src="@drawable/number" />

                    <TextView
                        android:id="@+id/number_one"
                        style="@style/TextDarkBox"
                        android:text="@string/number_1" />

                    <View style="@style/SeparatorDark" />

                    <TextView
                        android:id="@+id/number_two"
                        style="@style/TextDarkBox"
                        android:text="@string/number_2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/questionBox2"
                tools:context=".MainActivity">

                <ImageView
                    style="@style/Icon"
                    android:src="@drawable/write" />

                <TextView
                    android:id="@+id/mail_one"
                    style="@style/TextDarkBox"
                    android:text="@string/mail1" />

                <View style="@style/SeparatorDark" />

                <TextView
                    android:id="@+id/mail_two"
                    style="@style/TextDarkBox"
                    android:text="@string/mail2" />

            </LinearLayout>

            <LinearLayout
                style="@style/questionBox4"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/web"
                    style="@style/Icon"
                    android:src="@drawable/mouse" />

                <TextView
                    style="@style/TextLightBox"
                    android:text="@string/web1" />

                <TextView
                    style="@style/TextLightBox"
                    android:text="@string/web2" />

            </LinearLayout>

            <LinearLayout
                style="@style/questionBox2"
                tools:context=".MainActivity">

                <ImageView
                    style="@style/Icon"
                    android:src="@drawable/quote" />

                <TextView
                    style="@style/Sub_testimonials"
                    android:text="@string/testimonial_heading" />

                <View style="@style/SeparatorDark" />

                <TextView
                    android:id="@+id/testimonial"
                    style="@style/Testimonials"
                    android:text="@string/testimonial" />

            </LinearLayout>

            <TextView
                style="@style/Sub_portfolio"
                android:text="@string/portfolio_heading" />

            <HorizontalScrollView style="@style/HorizontalScrollView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">

                    <ImageView
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_width"
                        android:src="@drawable/photo2" />

                    <ImageView
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_width"
                        android:src="@drawable/photo3" />

                    <ImageView
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_width"
                        android:src="@drawable/photo1" />

                    <ImageView
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_width"
                        android:src="@drawable/photo4" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


